examples/test/testpolicy3569.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3569
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key7: value47
      key42: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value6
          key28: value45
      podSelector:
        matchLabels:
          key42: value16
